Updated target version to 1.8. Adding Basic authentication header to connection when user info is set in URL. Refactored some code to java1.8 lambdas.